--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,10 @@
 # testing
 /coverage
 
+# next.js
+/.next/
+/out/
+
 # production
 /build
 
@@ -21,3 +25,15 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+
+node_modules
+.DS_Store
+.map
+*.pem
+.vscode/settings.json
+.DS_Store
+assets/.DS_Store
+
+# vercel
+.vercel
