--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "sass": "^1.49.11"
   },
   "devDependencies": {
+    "@types/google.maps": "^3.48.5",
     "@types/node": "17.0.23",
     "@types/react": "17.0.43",
     "@types/react-dom": "17.0.14",
