--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest --watch --rootDir=tests"
   },
   "dependencies": {
     "next": "12.1.4",
@@ -15,13 +16,16 @@
     "sass": "^1.49.11"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.0.0",
     "@types/google.maps": "^3.48.5",
     "@types/node": "17.0.23",
     "@types/react": "17.0.43",
     "@types/react-dom": "17.0.14",
+    "cypress": "^9.5.3",
     "eslint": "8.12.0",
     "eslint-config-next": "12.1.4",
-    "typescript": "4.6.3",
-    "cypress": "^9.5.3"
+    "jest": "^27.5.1",
+    "typescript": "4.6.3"
   }
 }
